--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,10 +9,12 @@ html {
   width: 100%;
   margin: 0;
   font-size: 16px;
-  font-weight: 300;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
   margin: 0;
+}
+
+.page-wrap {
+  
 }
